Conditionally adapt to JS_CLASS_TRACE removal

Upstream removed it in http://hg.mozilla.org/mozilla-central/rev/a7784d11c59b

https://bugzilla.gnome.org/show_bug.cgi?id=646471