gi/keep-alive.c
@@ -184,8 +184,10 @@ keep_alive_trace(JSTracer *tracer,
  */
 static struct JSClass gjs_keep_alive_class = {
     "__private_GjsKeepAlive", /* means "new __private_GjsKeepAlive()" works */
-    JSCLASS_HAS_PRIVATE |
-    JSCLASS_MARK_IS_TRACE, /* TraceOp not MarkOp */
+#ifdef HAVE_JS_CLASS_TRACE
+    JSCLASS_MARK_IS_TRACE | /* TraceOp not MarkOp */
+#endif
+    JSCLASS_HAS_PRIVATE,
     JS_PropertyStub,
     JS_PropertyStub,
     JS_PropertyStub,
@@ -200,7 +202,11 @@ static struct JSClass gjs_keep_alive_class = {
     NULL,
     NULL,
     NULL,
+#ifdef HAVE_JS_CLASS_TRACE
     JS_CLASS_TRACE(keep_alive_trace),
+#else
+    keep_alive_trace,
+#endif
     NULL
 };
 
